--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: 'Montserrat', sans-serif;
-      background-image: url("https://pbs.twimg.com/profile_banners/1402738329532129280/1637698479/1500x500");
+      background-image: url("GIF.mp4");
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center center;
