--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calculadora de posiciones de futuros</title>
+  <title>Calculadora de posiciones</title>
   <style>
     body {
       font-family: 'Montserrat', sans-serif;
