--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: 'Montserrat', sans-serif;
-      background-image: url("./imagen.jpg");
+      background-image: url("./GIF.mp4");
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center center;
