--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
 
       return (
         <div className="container">
-          <h1>Calculadora de posiciones de futuros</h1>
+          <h1>Calculadora de posiciones</h1>
 
           <div className="form-group">
-            <label htmlFor="portfolio-size">Tamaño de cartera (USD)</label>
+            <label htmlFor="portfolio-size">Tamaño de cartera</label>
             <input
               type="number"
               id="portfolio-size"
@@ -167,7 +167,7 @@
           </div>
 
           <div className="form-group no-margin">
-            <label htmlFor="stop-loss-signal">Stop Loss de la señal</label>
+            <label htmlFor="stop-loss-signal">Stop Loss de la señal (%)</label>
             <input
               type="number"
               id="stop-loss-signal"
@@ -177,7 +177,7 @@
           </div>
 
           <div className="form-group">
-            <label htmlFor="leverage">Apalancamiento (%)</label>
+            <label htmlFor="leverage">Apalancamiento</label>
             <input
               type="number"
               id="leverage"
